tests/fixtures/invalid/min_float.py
# Cannot call min() with Float
x = min(1.0)
